Додано Gender та AvatarId у модель User, оновлено DTO та контролери для вибору аватара

--- a/BjuApiServer/appsettings.Development.json
+++ b/BjuApiServer/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=bju.db"
+    },
+    "Gemini": {
+        "ApiKey": "",
+        "Model": "gemini-2.5-flash"
     }
-  }
 }
